<resources>
    <string name="app_name">Urbano - Iridio</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="fab_menu_map_satelite">Satélite</string>
    <string name="fab_menu_map_relieve">Relieve</string>
    <string name="fab_menu_map_hibrido">Híbrido</string>
    <string name="fab_menu_map_trafico">Tráfico</string>
    <string name="act_main_message_date_time_incorrect">La fecha y/u hora del sistema no está correctamente configurado.\n\nAsegurese de que la fecha y hora del dispositivo este configurado de acuerdo a su zona local, antes de continuar.</string>
    <string name="menu_user_profile">Perfil</string>
    <string name="menu_user_profile_hello">Hola, %s</string>
    <string name="act_login_hint_input_username">USUARIO</string>
    <string name="act_login_hint_input_password">●●●●●●●</string>
    <string name="act_login_error_datos_usuario">Ingrese sus datos de usuario correctamente.</string>
    <string name="act_login_error_login">Ocurrio un error iniciando sesión, intentalo de nuevo.</string>
    <string name="act_login_login_success">Ha iniciado sesión exitosamente.</string>
    <string name="act_login_login_msg_error_descargando_motivos">Lo sentimos, no se pudo cargar los datos de motivos (CHK). Vuelva a iniciar sesión para cargar los motivos.</string>
    <string name="act_login_login_title_iniciando_sesion">Iniciando Sesión</string>
    <string name="act_login_login_msg_procesando_datos">Procesando datos&#8230;</string>
    <string name="act_login_login_msg_error_datos_user_profile">Ocurrió un error al procesar los datos del perfil de usuario. Por favor, inténtalo de nuevo.</string>
    <string name="act_login_login_msg_error_datos_app_data_default">Ocurrió un error al procesar los datos base de la aplicación. Por favor, inténtalo de nuevo.</string>
    <string name="act_login_login_msg_error_datos_app_menu_user">Ocurrió un error al procesar los datos del menu del usuario. Por favor, inténtalo de nuevo.</string>
    <string name="title_activity_plan_de_viaje">Plan De Viaje</string>
    <string name="act_plan_de_viaje_title_mapa_paradas">Mapa De Paradas</string>
    <string name="act_plan_de_viaje_no_definido">No definido.</string>
    <string name="act_plan_de_viaje_no_hay_plan_de_viaje">Actualmente no tiene un plan de viaje activo.</string>
    <string name="act_plan_de_viaje_error_datos_placa">Ingrese los datos de la placa correctamente.</string>
    <string name="act_plan_de_viaje_update_plan_viaje">Actualizando información de plan de viaje.</string>
    <string name="act_plan_de_viaje_title_confirmar_llegada">Confirmar Llegada</string>
    <string name="act_plan_de_viaje_title_confirmando_llegada">Confirmando Llegada</string>
    <string name="act_plan_de_viaje_message_confirmar_llegada">¿Usted desea confirmar su llegada a esta agencia?</string>
    <string name="act_plan_de_viaje_message_success_confirmar_llegada">Su llegada a la agencia ha sido confirmado correctamente.</string>
    <string name="act_plan_de_viaje_title_confirmar_salida">Confirmar Salida</string>
    <string name="act_plan_de_viaje_title_confirmando_salida">Confirmando Salida</string>
    <string name="act_plan_de_viaje_message_confirmar_salida">¿Usted desea confirmar su salida de esta agencia?</string>
    <string name="act_plan_de_viaje_message_success_confirmar_salida">Su salida de la agencia ha sido confirmado correctamente.</string>
    <string name="act_plan_de_viaje_title_parada_programada_finalizada">Parada Finalizada</string>
    <string name="act_plan_de_viaje_message_parada_programada_finalizada">Usted a finalizado su despacho en esta agencia.</string>
    <string name="act_plan_de_viaje_title_parada_programada_final">Parada Final</string>
    <string name="act_plan_de_viaje_message_parada_programada_final">Usted llegó a su ultima parada.</string>
    <string name="act_plan_de_viaje_btn_iniciar_ruta">Iniciar Ruta</string>
    <string name="act_plan_de_viaje_btn_terminar_ruta">Terminar Ruta</string>
    <string name="act_plan_de_viaje_title_iniciando_ruta">Iniciando Ruta</string>
    <string name="act_plan_de_viaje_title_finalizando_ruta">Finalizando Ruta</string>
    <string name="act_plan_de_viaje_message_success_iniciando_ruta">Su ruta ha sido iniciada correctamente.</string>
    <string name="act_plan_de_viaje_message_success_finalizando_ruta">Su ruta ha sido finalizado correctamente.</string>
    <string name="act_plan_de_viaje_message_no_inicio_ruta">Lo sentimos, aún no ha iniciado la ruta.</string>
    <string name="act_plan_de_viaje_message_no_se_encuentra_en_la_ubicacion">Lo sentimos, aún no se encuentra cerca de la ubicación de la agencia.</string>
    <string name="act_plan_de_viaje_message_no_confirmo_salida_parada_anterior">Lo sentimos, aún no ha confirmado la salida de la agencia anterior.</string>
    <string name="act_plan_de_viaje_message_no_reviso_despachos">Lo sentimos, aún no ha revisado si tiene despachos pendientes en esta agencia.</string>
    <string name="act_plan_de_viaje_message_no_ha_bajado_despachos">Lo sentimos, aún no ha realizado la descarga de los despachos en esta agencia.</string>
    <string name="act_plan_de_viaje_message_subida_despachos_exitoso">Los despachos fueron asignados correctamente.</string>
    <string name="act_plan_de_viaje_message_no_hay_despachos_pendientes_seleccionados">No ha seleccionado ningún despacho.</string>
    <string name="act_plan_de_viaje_message_no_puede_asignar_despachos_pendientes">Lo sentimos, no es posible asignar despachos por que la ruta ya fue iniciada.</string>
    <string name="act_plan_de_viaje_msg_seleccione_correctamente_origen">Seleccione correctamente el origen del plan de viaje.</string>
    <string name="act_plan_de_viaje_msg_sugerencia_seleccione_origen">Seleccione el origen del plan de viaje que desea asignarse.</string>
    <string name="act_plan_de_viaje_msg_advertencia_forzar_cierre_ruta">Considere que este proceso es irreversible, todo los datos se borrarán y se perderá todo el progreso actual del plan de viaje.\n\n¿Está seguro de que quiere continuar con el proceso de forzar cierre de ruta?</string>
    <string name="act_plan_de_viaje_msg_forzar_cierre_ruta_no_inicia_ruta">No es necesario forzar cierre el de ruta, por que aún no ha iniciado la ruta del plan de viaje.</string>
    <string name="act_plan_de_viaje_title_ubicacion_fuera_rango_origen_planviaje">Ubicación Actual Incorrecta</string>
    <string name="act_plan_de_viaje_msg_ubicacion_fuera_rango_origen_planviaje">Antes de continuar, considere que su posición actual no se encuentra en la ubicación del origen del plan de viaje.\n\nAsegurese de estar seleccionando el plan de viaje correcto antes de continuar.</string>
    <string name="act_plan_de_viaje_msg_imagenes_sync_pendientes">Para terminar la ruta debe verificar que todos las imágenes hayan sido sincronizados correctamente.</string>
    <string name="act_plan_de_viaje_msg_tomar_al_menos_una_foto">Debe tomar una foto como mínimo para confirmar la salida de la parada.</string>
    <string name="act_plan_de_viaje_msg_sugerencia_ingresar_kilometraje">Ingrese el kilometraje actual de la unidad que esta usando en el plan de viaje.</string>
    <string name="act_plan_de_viaje_msg_ingrese_kilometraje">Ingrese correctamente el kilometraje.</string>
    <string name="act_plan_de_viaje_msg_placa_no_valida">Para iniciar ruta debe ingresar una placa valida.</string>
    <string name="act_parada_programda_message_no_confirmo_llegada_parada">Lo sentimos, aún no ha confirmado la llegada a la agencia.</string>
    <string name="act_parada_programda_msg_no_confirmo_llegada_parada">Lo sentimos, ya marco salida de la agencia.</string>
    <string name="act_parada_programda_title_confirmando_despachos">Confirmando Despachos</string>
    <string name="act_plan_de_viaje_message_success_confirmar_despachos">Se ha confirmado los despachos correctamente.</string>
    <string name="act_parada_programda_message_no_puede_confirmar_porque_salio_agencia">Lo sentimos, ya no puede confirmar los despachos por que ya salio de la agencia.</string>
    <string name="act_parada_programda_message_no_puede_confirmar_porque_finalizo_plan_viaje">Lo sentimos, ya no puede confirmar los despachos por que el plan de viaje ha sido finalizado.</string>
    <string name="title_activity_parada_programada">Parada Programada</string>
    <string name="title_activity_google_map">Mi Ubicación</string>
    <string name="title_activity_ruta">Ruta del Día</string>
    <string name="activity_ruta_fab_menu_iniciar_ruta">Iniciar Ruta</string>
    <string name="activity_ruta_fab_menu_terminar_ruta">Cerrar Ruta</string>
    <string name="activity_ruta_message_ruta_iniciada_exitosamente">La ruta ha sido iniciada exitosamente.</string>
    <string name="activity_ruta_message_ruta_finalizado_exitosamente">La ruta ha sido finalizado exitosamente.</string>
    <string name="activity_ruta_message_ruta_ya_iniciada">La ruta ya ha sido iniciada.</string>
    <string name="activity_ruta_message_ruta_ya_finalizada">La ruta ya ha sido finalizado.</string>
    <string name="activity_ruta_message_ruta_no_iniciada">La ruta aún no ha sido iniciada.</string>
    <string name="activity_ruta_message_ruta_no_finalizado">La ruta aún no ha sido finalizado.</string>
    <string name="activity_ruta_title_hay_rutas_pendientes">Guías Pendientes por Gestionar</string>
    <string name="activity_ruta_message_hay_rutas_pendientes">Precaución, actualmente tiene guías pendientes por gestionar.\n\n¿Está seguro de que quiere cerrar la ruta?</string>
    <string name="activity_ruta_title_eliminar_manifiesto">Eliminar Manifiesto</string>
    <string name="activity_ruta_message_eliminar_manifiesto">¿Está seguro de que quiere eliminar el manifiesto?</string>
    <string name="activity_ruta_message_datos_sync_pendientes">Actualmente tiene datos por sincronizar, asegurese que todos los datos se sincronicen antes de cerrar la ruta.</string>
    <string name="activity_ruta_message_pendientes_liquidacion_devolucion">Actualmente tiene Liquidaciones/Devoluciones pendientes por gestionar, es necesario gestionarlos como no efectiva antes de cerrar la ruta.</string>
    <string name="activity_ruta_message_set_inicio_serie_exitosamente">El inicio de serie para las recolecciones fue establecido exitosamente.</string>
    <string name="activity_ruta_message_iniciar_ruta">Para empezar a realizar las gestiones de las guías, primero debe iniciar la ruta.\n\n¿Desea iniciar ruta?</string>
    <string name="activity_ruta_message_terminar_ruta">Para cerrar la ruta debe completar las gestiones de sus guías y verificar que todos los datos (Gestiones, Imágenes, GPS, etc) hayan sido sincronizados correctamente.\n\n¿Está seguro de que quiere cerrar la ruta?</string>
    <string name="activity_ruta_message_clave_forzar_cierre_ruta_incorrecto">Ingrese correctamente las credenciales.</string>
    <string name="activity_ruta_title_advertencia_forzar_cierre_ruta">Forzar Cierre de Ruta</string>
    <string name="activity_ruta_message_ingresar_credencial_personal_autorizado">Ingrese las credenciales del personal autorizado para forzar el cierre de ruta.</string>
    <string name="nav_drawer_fragment_title_cerrar_sesion">Cerrar Sesión</string>
    <string name="nav_drawer_fragment_message_cerrar_sesion">¿Seguro que desea cerrar sesión?</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_continuar">Continuar</string>
    <string name="urbano_copy_right">© 2022 URBANO HOLDING - IT</string>
    <string name="urbano_copy_right_text">Todos los derechos reservados.</string>
</resources>