<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.urbanoexpress.iridio3.ui.AcercaDeActivity"
    android:background="#ebebeb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gris_5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblVersionApp"
                android:text="Versión 0.0.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gris_5" />

            <ImageView
                android:layout_width="240dp"
                android:layout_height="77dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo_urbano_color"
                android:id="@+id/imgLogoUrbano" />

            <TextView
                android:text="@string/urbano_copy_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gris_5" />

            <TextView
                android:text="@string/urbano_copy_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/gris_5" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgBgUrbano"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_gravity="bottom"
            android:src="@drawable/bg_bienvenida"
            android:scaleType="centerCrop" />
    </LinearLayout>

</FrameLayout>
