<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_logout"
            android:layout_gravity="center"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_drawer_fragment_title_cerrar_sesion"
            android:textColor="@color/gris_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_drawer_fragment_message_cerrar_sesion"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkPrimaryText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="88dp"
            android:theme="@style/selectableItemGrisStyle"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/text_cancelar"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:layout_marginRight="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <Button
            android:id="@+id/btnSi"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="88dp"
            android:theme="@style/selectableItemGrisStyle"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/nav_drawer_fragment_title_cerrar_sesion"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
    </LinearLayout>

</LinearLayout>