<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_with_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightPrimaryText"
            android:text="Seleccionar Origen del Plan de Viaje"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlanViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darkDividers" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/lightPrimaryText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_plan_de_viaje_msg_sugerencia_seleccione_origen"
            android:textColor="@color/gris_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="88dp"
            android:theme="@style/selectableItemGrisStyle"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/text_cancelar"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:layout_marginRight="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minWidth="88dp"
            android:theme="@style/selectableItemGrisStyle"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/text_continuar"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:layout_marginRight="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>
    </LinearLayout>

</LinearLayout>