<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_with_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightPrimaryText"
            android:text="Forzar Cierre de Ruta"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@color/lightPrimaryText">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Usuario"
                                android:textColor="@color/darkSecondaryText"/>

                        </LinearLayout>

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/darkDividers" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".7"
                            android:gravity="center_vertical"
                            android:paddingLeft="15dp">

                            <EditText
                                android:id="@+id/txtUserName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:background="@color/lightPrimaryText"
                                android:maxLines="1"
                                android:textColor="@color/gris_2"
                                android:inputType="text|textCapCharacters" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/darkDividers" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/lightPrimaryText">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Contraseña"
                                android:textColor="@color/darkSecondaryText" />

                        </LinearLayout>

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/darkDividers" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".7"
                            android:gravity="center_vertical"
                            android:paddingLeft="15dp">

                            <EditText
                                android:id="@+id/txtPassword"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:background="@color/lightPrimaryText"
                                android:maxLines="1"
                                android:textColor="@color/gris_2"
                                android:inputType="textPassword" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/darkDividers" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/lightPrimaryText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_ruta_message_ingresar_credencial_personal_autorizado"
                    android:textColor="@color/gris_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:orientation="horizontal"
                android:gravity="right">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:theme="@style/selectableItemGrisStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:text="@string/text_cancelar"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="true"
                    android:layout_marginRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

                <Button
                    android:id="@+id/btnCerrarRuta"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="88dp"
                    android:theme="@style/selectableItemGrisStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:text="@string/activity_ruta_fab_menu_terminar_ruta"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="true"
                    android:layout_marginRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>